Update assets locations

--- a/server/component/head.html
+++ b/server/component/head.html
@@ -3,30 +3,30 @@
 <meta name="theme-color" content="#057fa5">
 <meta name="msapplication-TileColor" content="#057fa5">
 <!-- Icons -->
-<link rel="apple-touch-icon" sizes="57x57" href="/aplikace/assets/images/favicons/apple-icon-57x57.png">
-<link rel="apple-touch-icon" sizes="60x60" href="/aplikace/assets/images/favicons/apple-icon-60x60.png">
-<link rel="apple-touch-icon" sizes="72x72" href="/aplikace/assets/images/favicons/apple-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="76x76" href="/aplikace/assets/images/favicons/apple-icon-76x76.png">
-<link rel="apple-touch-icon" sizes="114x114" href="/aplikace/assets/images/favicons/apple-icon-114x114.png">
-<link rel="apple-touch-icon" sizes="120x120" href="/aplikace/assets/images/favicons/apple-icon-120x120.png">
-<link rel="apple-touch-icon" sizes="144x144" href="/aplikace/assets/images/favicons/apple-icon-144x144.png">
-<link rel="apple-touch-icon" sizes="152x152" href="/aplikace/assets/images/favicons/apple-icon-152x152.png">
-<link rel="apple-touch-icon" sizes="180x180" href="/aplikace/assets/images/favicons/apple-icon-180x180.png">
-<link rel="icon" type="image/png" sizes="192x192"  href="/aplikace/assets/images/favicons/android-icon-192x192.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/aplikace/assets/images/favicons/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="96x96" href="/aplikace/assets/images/favicons/favicon-96x96.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/aplikace/assets/images/favicons/favicon-16x16.png">
+<link rel="apple-touch-icon" sizes="57x57" href="/assets/catalog/images/favicons/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="/assets/catalog/images/favicons/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="/assets/catalog/images/favicons/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="/assets/catalog/images/favicons/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="/assets/catalog/images/favicons/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="/assets/catalog/images/favicons/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="/assets/catalog/images/favicons/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="/assets/catalog/images/favicons/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/catalog/images/favicons/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="/assets/catalog/images/favicons/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/assets/catalog/images/favicons/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="/assets/catalog/images/favicons/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/assets/catalog/images/favicons/favicon-16x16.png">
 <!-- External resources. -->
 <script>
   window.GOV_DS_CONFIG = {
     "canValidateWcagOnRender": true,
-    "iconsPath": "/design-system/assets/icons"
+    "iconsPath": "/assets/design-system/assets/icons"
   };
 </script>
-<link rel="stylesheet" href="./design-system/assets/styles/critical.css">
-<link rel="stylesheet" href="./design-system/build/core.css">
-<link rel="stylesheet" href="./design-system/assets/fonts/roboto.css">
-<script type="module" src="./design-system/build/core.esm.js"></script>
-<script nomodule src="./design-system/build/core.js"></script>
+<link rel="stylesheet" href="/assets/design-system/assets/styles/critical.css">
+<link rel="stylesheet" href="/assets/design-system/build/core.css">
+<link rel="stylesheet" href="/assets/design-system/assets/fonts/roboto.css">
+<script type="module" src="/assets/design-system/build/core.esm.js"></script>
+<script nomodule src="/assets/design-system/build/core.js"></script>
 <!-- Local resources. -->
-<link type="text/css" rel="stylesheet" href="/aplikace/assets/css/main.css">
+<link type="text/css" rel="stylesheet" href="/assets/catalog/css/main.css">
