--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -51,7 +51,7 @@
 }
 
 .distribution-list .distribution .distribution-column>div {
-  width: 50%;
+  width: calc(50% - .5rem);
   margin: .25rem;
 
   >h5 {
