Use tooltip and fix quality in dataset detail
#21

--- a/assets/css/dataset-detail.css
+++ b/assets/css/dataset-detail.css
@@ -16,6 +16,18 @@
   float: right;
 }
 
+.quality>*{
+  margin-left: .5rem;
+}
+
+.dataset-container .quality {
+  margin-right: 1em;
+}
+
+.distribution-item-wrap .quality {
+  margin-right: .5rem;
+}
+
 /* Legislation list. */
 
 .legislation-list .element > ul {
