--- a/server/component/facet-cs.html
+++ b/server/component/facet-cs.html
@@ -1,5 +1,15 @@
 <div class="facet">
-  <h3 class="facet-title">{{label}} ({{count}})</h3>
+  <div class="flex-space-between align-items-center">
+    <h3 class="facet-title inline">
+      {{label}} ({{count}})
+    </h3>
+    <gov-tooltip>
+      <gov-icon name="question-circle" type="bootstrap" class="larger"></gov-icon>
+      <gov-tooltip-content>
+        {{tooltipMessage}}
+      </gov-tooltip-content>
+    </gov-tooltip>
+  </div>
   <ul class="facet-list">
     {{#each items}}
     <li class="facet-item {{#if active}}active{{/if}}">
