--- a/server/component/navigation-cs.html
+++ b/server/component/navigation-cs.html
@@ -12,40 +12,46 @@
       </div>
     </gov-branding>
     <gov-nav wcag-label="Hlavní navigace">
-      <gov-nav-item href="/vzd%C4%9Bl%C3%A1v%C3%A1n%C3%AD">
+      <gov-nav-item href="/vzdělávání">
         Vzdělávání
       </gov-nav-item>
-      <gov-nav-item href="/%C4%8Dl%C3%A1nky">
+      <gov-nav-item href="/články">
         Články
       </gov-nav-item>
-      <gov-nav-item href="/datov%C3%A1-kvalita">
+      <gov-nav-item href="/datová-kvalita">
         Datová kvalita
       </gov-nav-item>
-      <gov-nav-item href="/datov%C3%A9-sady" {{#if datasetsActive}}class="active" {{/if}}>
-        Datové sady
-      </gov-nav-item>
-      <gov-nav-item href="/aplikace" {{#if applicationsActive}}class="active" {{/if}}>
-        Aplikace
-      </gov-nav-item>
+      <gov-nav-dropdown>
+        <span slot="label">Národní katalog otevřených dat</span>
+        <ul slot="dropdown">
+          <li>
+            <a href="/datové-sady" {{#if datasetsActive}}class="active" {{/if}}>Datové sady</a>
+          </li>
+          <li>
+            <a href="/aplikace" {{#if applicationsActive}}class="active" {{/if}}>Aplikace</a>
+          </li>
+          <li>
+            <a href="/poskytovatelé">Poskytovatelé</a>
+          </li>
+          <li>
+            <a href="/lokální-katalogy" {{#if localCatalogsActive}}class="active" {{/if}}>Lokální katalogy</a>
+          </li>
+          <li>
+            <a href="/návrhy-na-datové-sady-k-otevření" {{#if suggestionsActive}}class="active" {{/if}}>Návrhy na datové sady k otevření</a>
+          </li>
+        </ul>
+      </gov-nav-dropdown>
       <gov-nav-dropdown>
         <span slot="label">Další</span>
         <ul slot="dropdown">
           <li>
-            <a href="/z%C3%A1klady-otev%C5%99en%C3%BDch-dat-pro-z%C3%A1jemce/">Pro zájemce o otevírání dat</a>
+            <a href="/informace/základy-otevřených-dat-pro-zájemce/">Pro zájemce o otevírání dat</a>
           </li>
           <li>
-            <a href="https://opendata.gov.cz/informace:z%C3%A1klady-otev%C5%99en%C3%BDch-dat-pro-program%C3%A1tory">
-              Pro uživatele a programátory
-            </a>
+            <a href="https://opendata.gov.cz/informace:základy-otevřených-dat-pro-programátory">Pro uživatele a programátory</a>
           </li>
           <li>
             <a href="https://opendata.gov.cz/">Pro poskytovatele dat</a>
-          </li>
-          <li {{#if localCatalogsActive}}class="active" {{/if}}>
-            <a href="/lok%C3%A1ln%C3%AD-katalogy">Lokální katalogy</a>
-          </li>
-          <li {{#if suggestionsActive}}class="active" {{/if}}>
-            <a href="/n%C3%A1vrhy-na-datov%C3%A9-sady-k-otev%C5%99en%C3%AD">Návrhy na datové sady k otevření</a>
           </li>
         </ul>
       </gov-nav-dropdown>
