--- a/server/component/navigation-cs.html
+++ b/server/component/navigation-cs.html
@@ -1,14 +1,11 @@
 <header class="gov-header">
   <gov-container>
     <gov-branding>
-      <h1>
+      <div class="heading">
         <a href="/">Portál o datech</a>
-      </h1>
-      <div>
-        <gov-form-select wcag-label="jazyk" size="m" value="cs">
-          <option value="cs">Čeština</option>
-          <option value="en">English</option>
-        </gov-form-select>
+      </div>
+      <div class="language">
+        <a href="{{en}}">English</a>
       </div>
     </gov-branding>
     <gov-nav wcag-label="Hlavní navigace">
