Add item to navigation

--- a/server/component/navigation-cs.html
+++ b/server/component/navigation-cs.html
@@ -9,6 +9,9 @@
       </div>
     </gov-branding>
     <gov-nav wcag-label="Hlavní navigace">
+      <gov-nav-item href="/správa-dat">
+        Správa dat
+      </gov-nav-item>
       <gov-nav-item href="/vzdělávání">
         Vzdělávání
       </gov-nav-item>
