--- a/server/component/footer-en.html
+++ b/server/component/footer-en.html
@@ -11,9 +11,8 @@
         </ul>
         <h3 class="h6">Contacts</h3>
         <ul>
-          <li>National Open Data Coordinator: Radka&nbsp;Domanská</li>
+          <li>National Open Data Coordinator: Lenka&nbsp;Kováčová</li>
           <li>E-mail: <a href="mailto:otevrenadata@dia.gov.cz">otevrenadata@dia.gov.cz</a></li>
-          <li>Phone: <a href="tel:+420974817556">+420 974 817 556</a></li>
           <li>X: <a href="https://x.com/otevrenadata">@otevrenadata</a></li>
           <li><a href="https://dia.gov.cz/">Digital and Information Agency</a></li>
         </ul>
