--- a/server/component/facet-cs.html
+++ b/server/component/facet-cs.html
@@ -19,12 +19,12 @@
     </li>
     {{/each}}
     {{#if showMoreHref}}
-    <li class="facet-item">
+    <li class="facet-item italic">
       <a href="{{showMoreHref}}">Zobrazit další</a>
     </li>
     {{/if}}
     {{#if showInitialHref}}
-    <li class="facet-item">
+    <li class="facet-item italic">
       <a href="{{showInitialHref}}">Zobrazit pouze populární</a>
     </li>
     {{/if}}
