Add validation link to footer
#46

--- a/server/component/footer-cs.html
+++ b/server/component/footer-cs.html
@@ -6,6 +6,7 @@
         <ul>
           <li><a href="/formulář/registrace-datové-sady">Registrovat novou datovou sadu</a></li>
           <li><a href="/formulář/registrace-lokálního-katalogu">Registrovat nový lokální katalog</a></li>
+          <li><a href="{{catalogValidator}}">Validovat lokální katalog</a></li>
           <li><a href="{{applicationRegistrationFormUrl}}">Registrovat aplikaci využívající otevřená data</a></li>
           <li><a href="{{suggestionRegistrationFormUrl}}">Registrovat návrh datové sady k otevření</a></li>
         </ul>
