--- a/server/component/footer-en.html
+++ b/server/component/footer-en.html
@@ -6,6 +6,7 @@
         <ul>
           <li><a href="/formulář/dataset-registration">Register a dataset</a></li>
           <li><a href="/formulář/local-catalog-registration">Register a new local catalog</a></li>
+          <li><a href="{{catalogValidator}}">Validate local catalog</a></li>
           <li><a href="{{applicationRegistrationFormUrl}}">Register an application using open data</a></li>
           <li><a href="{{suggestionRegistrationFormUrl}}">Suggest data to be opened</a></li>
         </ul>
