--- a/server/component/footer-cs.html
+++ b/server/component/footer-cs.html
@@ -36,6 +36,9 @@
       <gov-grid-item size-sm="12/12" size-md="4/12" role="listitem" size="12/12">
         <h3 class="h6">Poděkování</h3>
         <gov-grid role="list">
+            <gov-grid-item size-sm="12/12" size-md="12/12" role="listitem" size-lg="12/12">
+              <img alt="Digitální a informační agentura" id="npologo" src="https://data.gov.cz/images/dia_bílá.svg" width="150">
+            </gov-grid-item>
             <gov-grid-item size-sm="12/12" size-md="12/12" role="listitem" size-lg="6/12">
                 <img alt="NextGenerationEU" id="npologo" src="https://data.gov.cz/images/ngeu-bily.webp" width="200">
             </gov-grid-item>
