--- a/assets/css/dataset-detail.css
+++ b/assets/css/dataset-detail.css
@@ -24,6 +24,11 @@
   gap: 0.25rem;
 }
 
+.endpointUrl {
+  display: flex;
+  flex-direction: column;
+}
+
 .dataset-container .quality {
   margin-right: 1em;
 }
