Load design system from URL

--- a/server/component/head.html
+++ b/server/component/head.html
@@ -35,13 +35,13 @@
 <script>
   window.GOV_DS_CONFIG = {
     "canValidateWcagOnRender": true,
-    "iconsPath": "/assets/design-system/assets/icons"
+    "iconsPath": "{{head.designSystemUrl}}/assets/icons"
   };
 </script>
-<link rel="stylesheet" href="/assets/design-system/assets/styles/critical.css">
-<link rel="stylesheet" href="/assets/design-system/build/core.css">
-<link rel="stylesheet" href="/assets/design-system/assets/fonts/roboto.css">
-<script type="module" src="/assets/design-system/build/core.esm.js"></script>
-<script nomodule src="/assets/design-system/build/core.js"></script>
+<link rel="stylesheet" href="{{head.designSystemUrl}}/assets/styles/critical.css">
+<link rel="stylesheet" href="{{head.designSystemUrl}}/build/core.css">
+<link rel="stylesheet" href="{{head.designSystemUrl}}/assets/fonts/roboto.css">
+<script type="module" src="{{head.designSystemUrl}}/build/core.esm.js"></script>
+<script nomodule src="{{head.designSystemUrl}}/build/core.js"></script>
 <!-- Local resources. -->
 <link type="text/css" rel="stylesheet" href="/assets/catalog/css/main.css">
