--- a/server/component/footer-en.html
+++ b/server/component/footer-en.html
@@ -12,7 +12,7 @@
         </ul>
         <h3 class="h6">Contacts</h3>
         <ul>
-          <li>National Open Data Coordinator: Lenka&nbsp;Kováčová</li>
+          <li>National Open Data Coordinator: Michal&nbsp;Kubáň</li>
           <li>E-mail: <a href="mailto:otevrenadata@dia.gov.cz">otevrenadata@dia.gov.cz</a></li>
           <li>X: <a href="https://x.com/otevrenadata">@otevrenadata</a></li>
           <li><a href="https://dia.gov.cz/">Digital and Information Agency</a></li>
